# Retiring-Adult

./: .gitignore  README.md  analysis.ipynb  pyproject.toml
src/: download_datasets.py  pre_process.py
