[tool.poetry]
name = "retiring-adult"
version = "0.1.0"
description = ""
authors = ["lucacorbucci <corbuccilu@gmail.com>"]
readme = "README.md"
packages = [{include = "retiring_adult"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
dill = "^0.3.6"
numpy = "^1.24.2"
folktables = "^0.0.12"
ruff = "^0.1.6"
torch = "^2.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.ruff.isort]
case-sensitive = true
combine-as-imports = true

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true


